edited form placeholder

--- a/src/app/components/todoform/todoform.component.html
+++ b/src/app/components/todoform/todoform.component.html
@@ -7,7 +7,7 @@
     <input
       type="text"
       formControlName="title"
-      placeholder="Enter New Todo"
+      placeholder="New Todo"
       class="w-full bg-gray-200 text-gray-900 text-sm font-semibold rounded-l-xl focus:outline-none focus:ring-0 focus:ring-offset-0 border-none placeholder-gray-600 shadow-xl h-10"
     />
   </div>
